# vyperAIII

./: .coverage  .dockerignore  .env.example  README.md  agent_manager.py  cache_manager.py  config.json  config.py  core_orchestrator.py  deepseek_chat.py  dynamic_team_manager.py  llm_factory.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg  setup.py  team_config.py  team_interfaces.py  team_structure.py  vyper_core.py
agents/: agent_communication.py  analysis_agent.py  audio_Agent.py  auth_manager.py  base_agent.py  browser_agent.py  capsolver_agent.py  content_generation_agent.py  coordination_agent.py  data_processing_agent.py  db_agent.py  deepseek_agent.py  mlops_agent.py  refiner_agent.py  research_agent.py  security_agent.py  service_integration_agent.py  simple_query_agent.py  validation_agent.py  vision_agent.py
audit/: blockchain_manager.py  decision_explainer.py
cache/: -106032219519378646.cache  -1067992390009944934.cache  -1105129828310405412.cache  -1347002968024315839.cache  -142593007930236544.cache  -148384686190934434.cache  -1588329179275308359.cache  -1946928706372064312.cache  -1979551125347418845.cache  -219489598260436429.cache  -2206573515794633090.cache  -2405289462761050037.cache  -2707005358774599997.cache  -2740178015175976964.cache  -2976945063563671140.cache  -3045427686710890037.cache  -3203851923180560926.cache  -3286013455814394427.cache  -350185825156456411.cache  -3582451769965872214.cache  -3644079132118148900.cache  -375486310956161853.cache  -3998424801746647632.cache  -4281797558347975935.cache  (+99 more)
(+54 files in other folders)
