[tool.poetry]
name = "vyper-ai"
version = "1.0.0"
description = "Dynamic AI Team Orchestration System"
authors = ["VyperAI Team"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
rich = "^13.5.0"
pydantic = "^2.0.0"
PyYAML = "^6.0.1"
aiohttp = "^3.8.5"
asyncio = "^3.4.3"
certifi = "^2023.7.22"
langchain = "^0.0.300"
langchain-openai = "^0.0.2"
openai = "^1.3.0"
transformers = "^4.30.2"
torch = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.3.0"
python-docx = "^0.8.11"
python-pptx = "^0.6.21"
reportlab = "^4.0.4"
prometheus-client = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"